--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 build/
+.build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -35,3 +36,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Local Maven settings for this repo
+javaport/.mvn/
+javaport/target/
